--- a/T2 - PLANTA FABRIL/enunciado.html
+++ b/T2 - PLANTA FABRIL/enunciado.html
@@ -1,4 +1,4 @@
-17. Planta Fabril
+<strong>17. Planta Fabril</strong>
 Numa planta fabril, diferentes tarefas requerem a utilização de diferentes recursos. Por vezes,
 pode dar-se o caso de uma tarefa específica requerer a utilização de mais do que um recurso
 em simultâneo. Por exemplo, se uma máquina necessita de um operador humano, temos dois
